Update examples to version 1.5.4.0
Signed-off-by: Said Altury <said.altury@ibm.com>

--- a/python/notebooks/02_Neural_network_fraud_detection.ipynb
+++ b/python/notebooks/02_Neural_network_fraud_detection.ipynb
@@ -36,50 +36,60 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 1. Load the existing model and dataset into the trusted environment\n",
+    "## Step 1. Load the existing model and dataset into the trusted environment and encrypt them\n",
     "\n",
-    "In this step we are loading a pre-trained model and a dataset while operating on a trusted client environment. The model and data used in this notebook correspond to a credit card fraud dataset. \n",
+    "#### 1.1. Preliminary setup\n",
     "\n",
-    "For convenience, the model has been pre-trained and is available in the `data_gen` folder, but you can also experiment with the model you generate yourself. To do that, first run the notebook at `data_gen/fraud_detection_demo.ipynb`, then turn off the boolean flag below, and continue with this notebook."
+    "We start with a some imports. The `pyhelayers` library is python version of the HElayer library, which allows us to run AI applications under HE. `utils` is a small set of utilities used in these notebook demos (see utils.py in this folder)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ac59ca",
-   "metadata": {},
+   "id": "319f7bdd-27b5-472f-8c56-40244425a5a9",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "import pyhelayers\n",
     "import utils \n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import utils\n",
     "\n",
     "utils.verify_memory()\n",
     "\n",
-    "load_from_pre_prepared = True\n",
-    "\n",
-    "from pathlib import Path\n",
-    "if load_from_pre_prepared:\n",
-    "    INPUT_DIR = Path(utils.get_data_sets_dir()) / 'net_fraud'\n",
-    "else:\n",
-    "    INPUT_DIR = Path('data/net_fraud/')\n",
-    "\n",
-    "import json\n",
-    "import utils\n",
+    "# You can change these variables to point to your own model\n",
+    "# and data files.\n",
+    "# Also, you can see how this model was created and trained in folder data_gen \n",
+    "INPUT_DIR = Path(utils.get_data_sets_dir()) / 'net_fraud'\n",
     "\n",
     "X_H5 = INPUT_DIR / 'x_test.h5'\n",
     "Y_H5 = INPUT_DIR / 'y_test.h5'\n",
     "MODEL_JSON = str(INPUT_DIR / 'model.json')\n",
     "MODEL_H5 = str(INPUT_DIR / 'model.h5')\n",
     "\n",
-    "batch_size = 4096\n",
-    "plain_samples, labels = utils.extract_batch_from_files(X_H5, Y_H5, batch_size, 0)\n",
+    "batch_size=4096\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0fd9ae-5d77-443f-84cf-407e21ecd98e",
+   "metadata": {},
+   "source": [
     "\n",
-    "print('Loaded samples of shape',plain_samples.shape)"
+    "#### 1.2. Load and encrypt the model\n",
+    "\n",
+    "The next step loads a model that was pre-trained in the clear."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1587ed8d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "The following figure illustrates the model being used:\n",
     "\n",
@@ -88,196 +98,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "089064aa-ba1b-4d53-bc77-9a3ab6e4b680",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "The initialization processes involves internally an optimization step.\n",
+    "This step finds the best parameters for this model, and also gives us estimations on the time it would take to predict using a single core, the precision, the memory, the time it would take to encrypt/decrypt, etc. \n",
+    "\n",
+    "The input to the compilation process are some preferences that we have, specified in the `HeRunRequirements` object. In this demo we just specify that we use HEaaN as the underlying backend. It is somewhat faster and takes less memory in this use case. We also specify the batch size, how many samples we plan to provide when we perform inference.\n",
+    "\n",
+    "There are many more parameters that can be specified to the optimizer. See more at the end of this notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa01f7e-12ee-4ad2-8740-aaa9073a19e8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "he_run_req = pyhelayers.HeRunRequirements()\n",
+    "# Request a HEaaN context if available, or a SEAL context otherwise\n",
+    "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
+    "he_run_req.optimize_for_batch_size(batch_size)\n",
+    "\n",
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode_encrypt([MODEL_JSON, MODEL_H5], he_run_req)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88460caf-7a37-4300-841e-e8e694656e28",
+   "metadata": {},
+   "source": [
+    "The above initialization processes also configured the HE encryption scheme, and generated the keys. These can be accessed via the `he_context` object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0afa46d4-88c7-4a10-97f8-986d1c95df0f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "he_context = nn.get_created_he_context()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb2494d2-8628-42ea-a9c2-b09e931d9965",
+   "metadata": {},
+   "source": [
+    "#### 1.3. Load and encrypt test data\n",
+    "\n",
+    "Next, we load a few samples to test our model with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ed3d2cb-8cf0-4233-a9e0-fdba62bdc8bc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plain_samples, labels = utils.extract_batch_from_files(X_H5, Y_H5, batch_size, 0)\n",
+    "\n",
+    "print('Loaded samples of shape',plain_samples.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8ebfdca2",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "\n",
-    "## Step 2. Encrypt the neural network in the trusted environment\n",
-    "\n",
-    "The next set of steps include the following:\n",
-    "\n",
-    "#### 2.1. Load NN architecture and weights using the FHE library"
+    "To encrypt them, we create a ModelIoEncoder for the model, responsible for encrypting the data in the correct format for our model.\n",
+    "The encrypted data is stored in an `EncryptedData` object."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "df72caaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyhelayers\n",
-    "\n",
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "neural_net_plain = pyhelayers.NeuralNetPlain()\n",
-    "neural_net_plain.init_from_files(hyper_params, [MODEL_JSON, MODEL_H5])\n",
-    "\n",
-    "print('neural_net_plain created and initialized')\n",
-    "\n",
-    "# NeuralNetPlain hold a neural network that is not encrypted.\n",
-    "# It can handle fully-connected, convolutional, and mean-pool layers.\n",
-    "# Supported activations: square, and higher-degree polynomials.\n",
-    "# It can also be used to run predictions, and compare it with the encrypted model (e.g. for debugging and testing)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a097ccf-5796-4ac0-be56-656710b7771c",
-   "metadata": {},
-   "source": [
-    "#### 2.2. Compile the plain model\n",
-    "\n",
-    "Now we take the plain model and run a process called compilation. This runs internally an Optimizer that finds the best parameters for this model. Not only does the Optimizer find the best parameters for you, but it also gives you estimations on the time it would take to predict using a single core, the precision, the memory, the time it would take to encrypt/decrypt, etc. \n",
-    "\n",
-    "The input to the compilation process are some preferences that we have. In this demo:\n",
-    "* We use HEaaN as the underlying backend. It is somewhat faster and takes less memory in this use case.\n",
-    "* We choose the batch size, how many samples would you provide each time for the inference model to do the classification\n",
-    "\n",
-    "This step doesn't yet encrypt the model, but prepares a 'profile' object that we can later use."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bead528",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "he_run_req = pyhelayers.HeRunRequirements()\n",
-    "# Request a HEaaN context if available, or a SEAL context otherwise\n",
-    "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
-    "\n",
-    "# Largest number we'll be able to safely process under encryption is `2^7=128`.\n",
-    "he_run_req.set_integer_part_precision(7)\n",
-    "# Our numbers are theoretically stored with precision of about 2^-30.\n",
-    "he_run_req.set_fractional_part_precision(30)\n",
-    "# Batch size for NN.\n",
-    "he_run_req.optimize_for_batch_size(batch_size)\n",
-    "\n",
-    "profile = pyhelayers.HeModel.compile(neural_net_plain, he_run_req)\n",
-    "\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "print(profile.to_string())\n",
-    "\n",
-    "print(\"He profile ready\")\n",
-    "print(\"Batch size: \",batch_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad9fb102",
-   "metadata": {},
-   "source": [
-    "#### NOTE\n",
-    "\n",
-    "* We specify integer precision of `7` bits. If we exceed this number, the results may be erroneous. But remember, no checks can be made when performing computations under encryption as no information on the data can be exposed.\n",
-    "\n",
-    "* We specify a fractional part of `30` bits. This means our numbers are theoretically stored with precision of about `2^-30`. This is misleading however: the ciphertext will inherently add some noise, and it will gradually corrupt more and more bits. The larger number we set here, the more precise our results will be, but at a cost of more expensive computation.\n",
-    "\n",
-    "We can specify whatever values we'd like. The optimizer will make sure to notify us if there's no feasible configuration given our requirements and the NN architecture we provide.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "199e80ba-ad94-45ef-98ff-5e7b0ed0b1ed",
-   "metadata": {},
-   "source": [
-    "#### 2.3. Initialize the context\n",
-    "\n",
-    "Here we initialize the FHE library based on the paramaters chosen for us in the profile object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1480edb7-54b4-4e10-8b66-b7a3ee2310ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment this to run over a mockup context\n",
-    "# profile.set_not_secure_mockup()\n",
-    "\n",
-    "client_context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('Crypto-library ready',client_context.print_signature())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "340214fe",
-   "metadata": {},
-   "source": [
-    "#### 2.4. Encrypt the NN\n",
-    "\n",
-    "The HE profile includes a set of requirements from the library, such as the security level, precision, size of ciphertext, multiplication depth, and some more complicated parameters. They were chosen by the optimizer to provide the best performance for the given task."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b30fe1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_nn = pyhelayers.NeuralNet(client_context)\n",
-    "client_nn.encode_encrypt(neural_net_plain, profile)\n",
-    "\n",
-    "print('client_nn initialized')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5593a77-cac2-4510-aa1e-8e67b29ff12d",
-   "metadata": {},
-   "source": [
-    "#### 2.5. Encrypt the data samples\n",
-    "\n",
-    "To encrypt the data we first create an io processor (iop for short).\n",
-    "The iop object is a lightweight object that knows the model's metadata and can be used to encrypt data for it, and later decrypt the output it sends."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2d8c51c-044b-45a5-899a-b0dac64994c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iop = client_nn.create_io_processor()\n",
-    "client_samples = pyhelayers.EncryptedData(client_context)\n",
-    "iop.encode_encrypt_inputs_for_predict(client_samples, [plain_samples])\n",
-    "print('Batch encrypted')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7dfc1d36-b248-4c74-b91b-6a4d82babf93",
    "metadata": {
     "tags": []
    },
-   "source": [
-    "#### 2.6. Save and send\n",
-    "We save the encrypted model, the context, and the samples in preparation for sending them to the server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1873c34c-d453-4cf4-9f76-034ebb4386a0",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "nn_buffer = client_nn.save_to_buffer()\n",
-    "samples_buffer = client_samples.save_to_buffer()\n",
-    "\n",
-    "# Save the context. Note that this saves all the HE library information, including the \n",
-    "# public key, allowing the server to perform HE computations.\n",
-    "# The secret key is not saved here, so the server won't be able to decrypt.\n",
-    "# The secret key is never stored unless explicitly requested by the user using the designated \n",
-    "# method.\n",
-    "context_buffer = client_context.save_to_buffer()\n",
-    "\n",
-    "print('Context, model, and samples saved')"
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
+    "encrypted_samples = pyhelayers.EncryptedData(he_context)\n",
+    "model_io_encoder.encode_encrypt(encrypted_samples, [plain_samples])\n"
    ]
   },
   {
@@ -287,35 +203,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 3. Perform predictions in the untrusted server using encrypted data and neural network\n",
+    "## Step 3. Perform predictions under encryption\n",
     "\n",
-    "#### 3.1. Load the neural network, samples and context in the server\n",
-    "We first load all the data sent from the client "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc04f598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server_context = pyhelayers.load_he_context(context_buffer)\n",
-    "server_nn = pyhelayers.load_he_model(server_context, nn_buffer)\n",
-    "server_samples = pyhelayers.load_encrypted_data(server_context, samples_buffer)\n",
-    "print('server ready')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29f08b71",
-   "metadata": {},
-   "source": [
-    "#### 3.2. Perform inference in cloud/server using encrypted data and encrypted NN\n",
+    "We assume the encrypted model and data were sent over to an untrusted server (see next demos for examples how to do that).\n",
     "\n",
-    "We can now run the inference of the encrypted data and encrypted NN to obtain encrypted results. This computation does not use the secret key and acts on completely encrypted values.\n",
+    "We can now run inference with the encrypted data and encrypted NN to obtain encrypted results. This computation does not use the secret key and acts on completely encrypted values.\n",
     "\n",
-    "**NOTE: the data, the NN and the results always remain in encyrpted state, even during computation.**"
+    "*NOTE: the data, the NN and the results always remain in encrypted state, even during computation.**"
    ]
   },
   {
@@ -325,10 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server_predictions = pyhelayers.EncryptedData(server_context)\n",
+    "enc_predictions = pyhelayers.EncryptedData(he_context)\n",
     "with utils.elapsed_timer('predict', batch_size) as timer:\n",
-    "    server_nn.predict(server_predictions, server_samples)\n",
-    "predictions_buffer = server_predictions.save_to_buffer()"
+    "    nn.predict(enc_predictions, encrypted_samples)"
    ]
   },
   {
@@ -338,28 +231,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 4. Decrypt the prediction results in the trusted environment\n",
+    "## Step 4. Decrypt and assess the prediction results in the trusted environment\n",
     "\n",
-    "Now we're back on the trusted side. We can load the predictions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f93b871",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_predictions = pyhelayers.load_encrypted_data(client_context,predictions_buffer)\n",
-    "print('predictions loaded')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ce5c404",
-   "metadata": {},
-   "source": [
-    "Now we can decrypt and decode them. The client's side context also has the secret key, so all objects on the client side can perform decryption."
+    "Assuming the results were sent back to the trusted client side, we can decrypt and decode them."
    ]
   },
   {
@@ -369,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plain_predictions = iop.decrypt_decode_output(client_predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(enc_predictions)\n",
     "print('predictions',plain_predictions)"
    ]
   },
@@ -378,10 +252,6 @@
    "id": "3763e886",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "\n",
-    "## Step 5. Assess the results - precision, recall, F1 score\n",
-    "\n",
     "As this classification problem is a binary one, we will assess the results by comparing the positive and negative classifications with the true labels, also calculating the precision, recall and F1 score.\n",
     "\n",
     "When running the model in the plain (see `data_gen/fraud_detection_demo.ipynb`), we get the following confusion matrix:  \n",
@@ -397,17 +267,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.assess_results(labels, plain_predictions)"
+    "accuracy=utils.assess_results(labels, plain_predictions)\n",
+    "if (accuracy<0.9):\n",
+    "    raise Exception(\"Accuracy too large\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b080cf37",
+   "cell_type": "markdown",
+   "id": "5787edd7-6de8-42f4-990d-240d0bfee2bf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(\"RAM usage:\", utils.get_used_ram(), \"MB\")"
+    "## Summary\n",
+    "\n",
+    "We have shown an example of running inference over encrypted data with a Neural Network. Additional notebooks in this folder demonstrate many more model types, and more ways to utilize them. Here is an overview of some of these possibilities:\n",
+    "\n",
+    "* HElayers has extensive support for Neural Networks. See the online documentation for more. It supports also Logistic Regression, XGboost, and other types of models.\n",
+    "* Other notebooks in this folder demonstrate how to perform I/O operators on the keys and the encrypted objects to allow working with a remote untrusted server.\n",
+    "* The instruction `he_run_req.optimize_for_batch_size(batch_size)` in step 1.2 optimizes the system for handling the given batch size. You can try experimenting with other sizes. Generally for smaller sizes the system will have better latency and worse throughput. Other options for `he_run_req` include controlling the size of numbers being processed, the accuracy, security level, and more.\n",
+    "* In this demo both the Neural Network weights and the input were encrypted. For a scenario where only in the input is encrypted, set `he_run_req.set_model_encrypted(False)`, and the subsequent call to `encode_encrypt` with a call to `encode`.\n",
+    "\n"
    ]
   },
   {
