--- a/python/notebooks/03_Logistic_regression_fraud_detection.ipynb
+++ b/python/notebooks/03_Logistic_regression_fraud_detection.ipynb
@@ -32,7 +32,8 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 1. Load the existing model and dataset in the trusted environment\n",
+    "## Step 1. Load the existing model and dataset in the trusted environment and encrypt them\n",
+    "#### 1.1. Preliminary setup\n",
     "\n",
     "In this step we are loading a LR model and a dataset while operating in a trusted client environment, which correspond to a credit card fraud dataset.\n",
     "\n",
@@ -46,16 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyhelayers\n",
     "import utils \n",
+    "from pathlib import Path\n",
+    "import utils\n",
     "\n",
     "utils.verify_memory()\n",
     "\n",
     "load_from_pre_prepared = True\n",
-    "\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "import utils\n",
-    "\n",
     "\n",
     "if load_from_pre_prepared:\n",
     "    INPUT_DIR = Path(utils.get_data_sets_dir()) / 'lr_fraud'\n",
@@ -77,37 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
+    "#### 1.2. Encrypt the model in a trusted environment\n",
     "\n",
-    "## Step 2. Encrypt the logistic regression model in the trusted environment\n",
-    "\n",
-    "In a similar manner to the previous example, The next set of steps include the following:\n",
-    "\n",
-    "#### 2.1. Load LR architecture and weights using the FHE library\n",
-    "Note that in this example, we use the high-level objects provided by the pyhelayers library for LR (`LogisticRegressionPlain` and `LogisticRegression`) instead of `NeuralNetPlain` and `NeuralNet`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyhelayers\n",
-    "\n",
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "plain = pyhelayers.PlainModel.create(hyper_params, [MODEL_JSON])\n",
-    "\n",
-    "print('logistic regression model loaded into the library')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.2. Compile the plain model\n",
-    "\n",
-    "Similaly as in the previoues notebook, the next step is running the Optimizer for determining the most suitable profile for this problem. We use HEaaN as the underlying backend. It is somewhat faster and takes less memory in this use case."
+    "In a similar manner to the previous example."
    ]
   },
   {
@@ -119,59 +90,18 @@
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "# Request a HEaaN context if available, or a SEAL context otherwise\n",
     "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
-    "\n",
     "he_run_req.optimize_for_batch_size(batch_size)\n",
     "\n",
-    "profile = pyhelayers.HeModel.compile(plain, he_run_req)\n",
-    "\n",
-    "print(\"He profile ready\")"
+    "client_lr = pyhelayers.LogisticRegression()\n",
+    "client_lr.encode_encrypt([MODEL_JSON], he_run_req)\n",
+    "client_context = client_lr.get_created_he_context()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3. Initialize the context\n",
-    "\n",
-    "Here we initialize the FHE library based on the paramaters chosen for us in the profile object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_context = pyhelayers.HeModel.create_context(profile)\n",
-    "print(\"Initialized context\", client_context)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.4. Encrypt the logistic regression model\n",
-    "\n",
-    "Once the optimizer has generated a HE profile, we use it to encode and encrypt the LR model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_lr = pyhelayers.LogisticRegression(client_context)\n",
-    "client_lr.encode_encrypt(plain, profile)\n",
-    "\n",
-    "print('Encrypted LR model ready.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.5. Encrypt the data in a trusted environment\n",
+    "#### 1.3. Encrypt the data in a trusted environment\n",
     "\n",
     "Also in a similar manner to the previous example, the plaintext samples are encrypted:"
    ]
@@ -182,10 +112,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop = client_lr.create_io_processor()\n",
+    "modelIoEncoder = pyhelayers.ModelIoEncoder(client_lr)\n",
     "\n",
     "client_samples = pyhelayers.EncryptedData(client_context)\n",
-    "iop.encode_encrypt_inputs_for_predict(client_samples, [plain_samples])\n",
+    "modelIoEncoder.encode_encrypt(client_samples, [plain_samples])\n",
     "print('predication data has been encrypted.')"
    ]
   },
@@ -193,8 +123,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.6. Save and send\n",
-    "We save the encrypted model, the context, and the samples in preparation for sending them to the server"
+    "#### 1.4. Save and send\n",
+    "In this notebook we demonstrate the serialization API. We save the encrypted model, the context, and the samples in preparation for sending them to the server."
    ]
   },
   {
@@ -222,14 +152,14 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 3. Perform predictions on a remote server using encrypted data and logistic regression"
+    "## Step 2. Perform predictions on a remote server using encrypted data and logistic regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1. Load the model, samples and context in the server\n",
+    "#### 2.1. Load the model, samples and context in the server\n",
     "\n",
     "In the server side, we use the previously saved data to prepare the server:"
    ]
@@ -249,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2. Perform inference in cloud/server using encrypted data and encrypted LR\n",
+    "#### 2.2. Perform inference in cloud/server using encrypted data and encrypted LR\n",
     "\n",
     "We can now run the inference of the encrypted data and encrypted LR to obtain encrypted results. This computation does not use the secret key and acts on completely encrypted values.\n",
     "\n",
@@ -276,7 +206,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 4. Decrypt the prediction results in the trusted environment\n",
+    "## Step 3. Decrypt the prediction results in the trusted environment\n",
     "\n",
     "The encrypted predictions computed by the server (stored at `predictions_buffer`) can now be decrypted and decoded in the client:"
    ]
@@ -292,7 +222,7 @@
     "print('predictions loaded')\n",
     "\n",
     "# Decrypt results\n",
-    "plain_predictions = iop.decrypt_decode_output(client_predictions)\n",
+    "plain_predictions = modelIoEncoder.decrypt_decode_output(client_predictions)\n",
     "print('predictions',plain_predictions)"
    ]
   },
@@ -302,7 +232,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 5. Assess the results - precision, recall, F1 score\n",
+    "## Step 4. Assess the results - precision, recall, F1 score\n",
     "\n",
     "Finally, we assess the results by comparing the positive and negative classifications with the true labels, also calculating the precision, recall and F1 score.\n",
     "\n",
