--- a/python/notebooks/04_Text_classification.ipynb
+++ b/python/notebooks/04_Text_classification.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5d443513",
    "metadata": {},
@@ -20,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a99b4fab",
    "metadata": {},
@@ -75,7 +73,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b0d9bd78",
    "metadata": {},
@@ -143,7 +140,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e98cef46",
    "metadata": {},
@@ -173,7 +169,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "941cf371",
    "metadata": {},
@@ -238,7 +233,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e42d41d0",
    "metadata": {},
@@ -282,7 +276,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9edf817e",
    "metadata": {},
@@ -293,7 +286,8 @@
     "## Step 2. FHE inference\n",
     "\n",
     "\n",
-    "#### 2a. Load the plain model and the model weights that we just trained"
+    "#### 2a. Load the plain model and the model weights that we just trained and encrypt them in a trusted environment.\n",
+    " We now load the model files in HElayers. This runs internally an optimization process that finds the best parameters for this model. We can provide various additional parameters as input. The only thing we tune here is the batch size (how many samples would you provide each time for the inference model to do the classification). Here we define it as 8."
    ]
   },
   {
@@ -308,77 +302,25 @@
     "import pyhelayers\n",
     "import utils\n",
     "\n",
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "nnp = pyhelayers.NeuralNetPlain()\n",
-    "nnp.init_from_files(hyper_params, [PATH + \"/model.json\", PATH + \"/model.h5\"])\n",
-    "print(\"loaded plain model\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "818dbefb",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "#### 2b. Compile the plain model and initialize the FHE context with parameters that are optimized for throughput performance\n",
-    "Now we take the plain model and run a process called compilation. This runs internally an Optimizer that finds the best parameters for this model. Not only does the Optimizer find the best parameters for you, but it also gives you estimations on the time it would take to predict using a single core, the precision, the memory, the time it would take to encrypt/decrypt, etc. \n",
-    "\n",
-    "You can see here that this does not require a lot of input. The only thing you have to tune here is the batch size (how many samples would you provide each time for the inference model to do the classification). Here we define it as 8."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "211b95f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "he_run_req.set_he_context_options([pyhelayers.DefaultContext()])\n",
     "he_run_req.optimize_for_batch_size(8)\n",
     "\n",
-    "profile = pyhelayers.HeModel.compile(nnp, he_run_req)\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "print('Profile ready. Batch size=',batch_size)\n",
-    "\n",
-    "context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('HE context initalized')"
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode_encrypt([PATH + \"/model.json\", PATH + \"/model.h5\"], he_run_req)\n",
+    "context = nn.get_created_he_context()\n",
+    "batch_size = nn.get_profile().get_optimal_batch_size()\n",
+    "print(\"model loaded and encrypted\")"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "7e86a076",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "#### 2c. Encode and encrypt the neural network model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a61b2fcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nn = pyhelayers.NeuralNet(context)\n",
-    "nn.encode_encrypt(nnp, profile)\n",
-    "print('Encrypted network ready')"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bcf4cf77",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "#### 2d. Load and encrypt the test data"
+    "#### 2b. Load and encrypt the test data"
    ]
   },
   {
@@ -396,21 +338,20 @@
     "plain_samples, labels = utils.extract_batch(x_test, y_test, batch_size, 0)\n",
     "print('Batch of size',batch_size,'loaded')\n",
     "\n",
-    "iop = nn.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
     "samples = pyhelayers.EncryptedData(context)\n",
-    "iop.encode_encrypt_inputs_for_predict(samples, [plain_samples])\n",
+    "model_io_encoder.encode_encrypt(samples, [plain_samples])\n",
     "print('Test data encrypted')"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65bd14de",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "#### 2e. Perform the FHE inference"
+    "#### 2c. Perform the FHE inference"
    ]
   },
   {
@@ -428,14 +369,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8394ac23",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "#### 2f. Decrypt and print the predictions"
+    "#### 2d. Decrypt and print the predictions"
    ]
   },
   {
@@ -445,26 +385,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plain_predictions = iop.decrypt_decode_output(predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(predictions)\n",
     "print('predictions',plain_predictions)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "91f6eb9b",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "#### 2g. Evaluate the model"
+    "#### 2e. Evaluate the model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3e33a50d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "utils.assess_results(labels, plain_predictions)"
