--- a/python/notebooks/05_Deep_neural_networks.ipynb
+++ b/python/notebooks/05_Deep_neural_networks.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 1. Unencrypted deep neural network model\n",
+    "## Step 1. Encoded deep neural network model (with plaintext weights)\n",
     "\n",
     "#### 1a. Import and initialize"
    ]
@@ -68,7 +68,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### 1b. Load the network model with random weights"
+    "#### 1b. Load the network model with random weights and encode it using helayers\n",
+    "\n",
+    "We specify some hyper parameters that control the randomness of the weights. We also create `HeRunRequirements` that include some additional parameters to run the model with. Finally, we encode a NeuralNetwork model that depends on the specified hyper parameters and HE run requirements."
    ]
   },
   {
@@ -84,91 +86,28 @@
     "hyper_params.sparse_rate = 0.5\n",
     "hyper_params.verbose = True\n",
     "\n",
-    "nnp = pyhelayers.NeuralNetPlain()\n",
-    "\n",
     "if model_architecture == 'AlexNet':\n",
     "    utils.verify_memory(min_memory_size=90)\n",
-    "    nnp.init_from_files(hyper_params, [input_dir + \"net_alex/model_same_padding.json\"])\n",
+    "    input_file = [input_dir + \"net_alex/model_same_padding.json\"]\n",
     "elif model_architecture == 'SqueezeNet':\n",
     "    utils.verify_memory(min_memory_size=120)\n",
-    "    nnp.init_from_files(hyper_params, [input_dir + \"squeeze_net/model.onnx\"])\n",
+    "    input_file = [input_dir + \"squeeze_net/model.onnx\"]\n",
     "elif model_architecture == 'ResNet-18':\n",
     "    utils.verify_memory(min_memory_size=180)\n",
-    "    nnp.init_from_files(hyper_params, [input_dir + \"res_net_18/model.onnx\"])\n",
+    "    input_file = [input_dir + \"res_net_18/model.onnx\"]\n",
     "\n",
-    "print(\"Loaded plain model\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "#### 1c. Compilation (automatic optimizations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "# Request a HEaaN context if available, or a SEAL context otherwise\n",
     "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
     "he_run_req.set_model_encrypted(False)\n",
-    "he_run_req.set_lazy_encoding(True)\n",
+    "he_run_req.set_lazy_mode(pyhelayers.LazyMode.LAZY_ENCODING)\n",
     "\n",
-    "profile = pyhelayers.HeModel.compile(nnp, he_run_req)\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "print('Profile ready. Batch size=',batch_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode(input_file, he_run_req, hyper_params)\n",
+    "context = nn.get_created_he_context()\n",
+    "batch_size = nn.get_profile().get_optimal_batch_size()\n",
     "\n",
-    "#### 1d. Generate random test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plain_input_shape = nnp.get_input_shapes_for_predict()[0]\n",
-    "plain_input_shape[0] = batch_size\n",
-    "\n",
-    "plain_samples = np.random.uniform(-0.5, 0.5, plain_input_shape)\n",
-    "print(\"Generated random plain samples\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "#### 1e. Initialize context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('HE Context ready')\n",
-    "\n",
-    "process = psutil.Process(os.getpid())\n",
-    "print(\"Memory consumption (GB): \", process.memory_info().rss / (1000*1000*1000))"
+    "print(\"Loaded and encoded the model\")"
    ]
   },
   {
@@ -179,7 +118,8 @@
     "\n",
     "## Part 2. Encoded deep Neural Network Model\n",
     "\n",
-    "#### 2a. Encode the model using FHE"
+    "#### 2a. Encrypt random input samples\n",
+    "We Generate a `ModelIoEncoder` which manages the encryption and decryption of the model's input and output. This model IO encoder is then used to encrypt random input samples."
    ]
   },
   {
@@ -188,36 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "nn = pyhelayers.NeuralNet(context)\n",
-    "nn.encode(nnp, profile)\n",
-    "print('HE model ready')\n",
-    "\n",
-    "process = psutil.Process(os.getpid())\n",
-    "print(\"Memory consumption (GB): \", process.memory_info().rss / (1000*1000*1000))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "#### 2b. Encrypt the input samples with the random image created earlier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "iop = nn.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
     "samples = pyhelayers.EncryptedData(context)\n",
-    "iop.encode_encrypt_inputs_for_predict(samples, [plain_samples])\n",
+    "model_io_encoder.encode_encrypt_random_inputs(samples, num_batches=1)\n",
     "print('Encrypted samples ready')\n",
     "\n",
     "process = psutil.Process(os.getpid())\n",
@@ -230,7 +143,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### 2c. Perform inference under encryption \n"
+    "#### 2b. Perform inference under encryption \n"
    ]
   },
   {
@@ -259,7 +172,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### 2d. Decrypt results"
+    "#### 2c. Decrypt results"
    ]
   },
   {
@@ -270,7 +183,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "plain_predictions = iop.decrypt_decode_output(predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(predictions)\n",
     "print('Decrypted predictions ready')\n",
     "\n",
     "process = psutil.Process(os.getpid())\n",
@@ -280,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(plain_predictions)"
