--- a/python/notebooks/07_Kmeans.ipynb
+++ b/python/notebooks/07_Kmeans.ipynb
@@ -104,36 +104,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4. Load the model\n",
+    "### 1.4. Load and encrypt the model\n",
     "\n",
-    "We now load the model into helayers. It's still in plaintext (not yet encrypted)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "plain = pyhelayers.KMeansPlain()\n",
-    "plain.init_from_files(hyper_params, [os.path.join(data_dir,\"model.csv\")])\n",
-    "print(\"loaded plain model\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.5. Compile the plain model\n",
-    "\n",
-    "Now we take the plain model and run a process called compilation. This runs internally an Optimizer that finds the best parameters for this model. Not only does the Optimizer find the best parameters for you, but it also gives you estimations on the time it would take to predict using a single core, the precision, the memory, the time it would take to encrypt/decrypt, etc. \n",
-    "\n",
-    "The input to the compilation process are some preferences that we have. In this demo:\n",
+    "We now load and ecnrypt the model using helayers. The encryption function also runs internally an Optimizer that finds the best parameters for this model. We can provide various additional parameters as an input. In this demo:\n",
     "* We choose to optimize for the DefaultContext (SEAL)\n",
-    "* We choose the batch size, how many samples would you provide each time for the inference model to do the classification\n",
-    "\n",
-    "This step doesn't yet encrypt the model, but prepares a 'profile' object that we can later use."
+    "* We choose the batch size, how many samples would you provide each time for the inference model to do the classification"
    ]
   },
   {
@@ -146,12 +121,14 @@
     "he_run_req.set_he_context_options([pyhelayers.DefaultContext()])\n",
     "he_run_req.optimize_for_batch_size(8192)\n",
     "\n",
-    "profile = pyhelayers.HeModel.compile(plain, he_run_req)\n",
+    "model_file = [os.path.join(data_dir,\"model.csv\")]\n",
     "\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "print(profile.to_string())\n",
+    "client_kmeans = pyhelayers.KMeans()\n",
+    "client_kmeans.encode_encrypt(model_file, he_run_req)\n",
+    "client_context = client_kmeans.get_created_he_context()\n",
+    "batch_size = client_kmeans.get_profile().get_optimal_batch_size()\n",
     "\n",
-    "print(\"He profile ready\")\n",
+    "print(\"loaded and encrypted a KMeans model\")\n",
     "print(\"Batch size: \",batch_size)"
    ]
   },
@@ -159,48 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6. Initialize the context\n",
-    "\n",
-    "Here we initialize the FHE library based on the paramaters chosen for us in the profile object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('Crypto-library ready')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.7. Encrypt the resulting K-means centroids in preparation for inferencing to find the nearest cluster for a sample\n",
-    "\n",
-    "Now we can encrypt our model, again using parameters chosen for us in the profile."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "client_kmeans = pyhelayers.KMeans(client_context)\n",
-    "print('\\rencrypting . . .\\r',flush=True)\n",
-    "client_kmeans.encode_encrypt(plain, profile)\n",
-    "print('encrypted KMeans ready')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.8. Provide labels to each of the data samples according to the proximity of a centroid "
+    "### 1.5. Provide labels to each of the data samples according to the proximity of a centroid "
    ]
   },
   {
@@ -225,10 +161,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.9. Encrypt the data samples\n",
+    "### 1.6. Encrypt the data samples\n",
     "\n",
-    "To encrypt the data we first create an io processor (iop for short).\n",
-    "The iop object is a lightweight object that knows the model's metadata and can be used to encrypt data for it, and later decrypt the output it sends."
+    "To encrypt the data we first create a model io encoder.\n",
+    "The model io encoder object is a lightweight object that knows the model's metadata and can be used to encrypt data for it, and later decrypt the output it sends."
    ]
   },
   {
@@ -237,9 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop=client_kmeans.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(client_kmeans)\n",
     "client_samples = pyhelayers.EncryptedData(client_context)\n",
-    "iop.encode_encrypt_inputs_for_predict(client_samples, [test_data])\n",
+    "model_io_encoder.encode_encrypt(client_samples, [test_data])\n",
     "print('Batch encrypted')"
    ]
   },
@@ -247,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.10. Save and send\n",
+    "### 1.7. Save and send\n",
     "We save the encrypted model, the context, and the samples in preparation for sending them to the server"
    ]
   },
@@ -288,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Run prediction\n",
+    "### 2.2. Run prediction\n",
     "\n",
     "With the inputs and centroids both encrypted, we find the distance between each input and each centroid.\n",
     "\n",
@@ -319,7 +255,7 @@
    "source": [
     "## Step 3. Assess results on the client side\n",
     "\n",
-    "We first load the data and decrypt it, again using the 'iop'.\n",
+    "We first load the data and decrypt it, again using the model io encoder.\n",
     "\n",
     "Then we compare it with the ground truth labels"
    ]
@@ -334,7 +270,7 @@
     "print('predictions loaded')\n",
     "\n",
     "# Decrypting results\n",
-    "plain_predictions = iop.decrypt_decode_output(client_predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(client_predictions)\n",
     "\n",
     "print('HE predictions:',plain_predictions)\n",
     "print('True labels:',labels)\n",
