--- a/python/notebooks/08_Linear_regression_low_level_api.ipynb
+++ b/python/notebooks/08_Linear_regression_low_level_api.ipynb
@@ -10,7 +10,7 @@
     "expected runtime: 10 seconds.\n",
     "\n",
     "## Introduction\n",
-    "Linear regression is a supervised machine learning algorithm that is used to predict the value of a variable based on the value of another variable. The variable you want to predict is called the dependent variable. The variable you are using to predict the other variable's value is called the independent variable. Now we can do it fully encrypted.\n",
+    "This notebook demonstrates use of the low level HElayers HeModel API that allows finer control than the regular API demonstrated in previous notebooks. Linear regression is a supervised machine learning algorithm that is used to predict the value of a variable based on the value of another variable. The variable you want to predict is called the dependent variable. The variable you are using to predict the other variable's value is called the independent variable. Now we can do it fully encrypted.\n",
     "\n",
     "## Use case\n",
     "One potential FHE use case using Linear Regression is secure prediction of delivery status and can be applied to supply chain cases in a multitude of industries. \n",
@@ -162,21 +162,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop = enc_model.create_io_processor()\n",
+    "ioe = pyhelayers.ModelIoEncoder(enc_model)\n",
     "\n",
     "duration=0\n",
     "for i in range(3):\n",
     "    input=np.random.randn(batch_size,dims)\n",
     "\n",
     "    enc_input = pyhelayers.EncryptedData(context)\n",
-    "    iop.encode_encrypt_inputs_for_predict(enc_input, [input])\n",
+    "    ioe.encode_encrypt(enc_input, [input])\n",
     "\n",
     "    start_time = time.perf_counter()\n",
     "    enc_res = pyhelayers.EncryptedData(context)\n",
     "    enc_model.predict(enc_res, enc_input)\n",
     "    duration += time.perf_counter() - start_time\n",
     "\n",
-    "    res=iop.decrypt_decode_output(enc_res)\n",
+    "    res=ioe.decrypt_decode_output(enc_res)\n",
     "\n",
     "    res=res.reshape(batch_size)\n",
     "    expected_res=np.inner(coefs,input)+intercept\n",
@@ -203,7 +203,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
