--- a/python/notebooks/09_Neural_network_MNIST.ipynb
+++ b/python/notebooks/09_Neural_network_MNIST.ipynb
@@ -272,7 +272,7 @@
     "\n",
     "utils.verify_memory()\n",
     "\n",
-    "print('Misc. initalizations')"
+    "print('Misc. initializations')"
    ]
   },
   {
@@ -280,14 +280,12 @@
    "id": "fd942b0e",
    "metadata": {},
    "source": [
-    "Here's a general outline of what we're about to do:\n",
+    "The following is a general outline of the next steps.\n",
     "\n",
-    "First, we'll build a plain neural network model, loading it from files that were created and saved above.\n",
-    "Then, an automated optimizer will examine our network and will provide us with an HE profile: various configuration details that will allow running inference under encryption efficiently.\n",
-    "Finally, we'll construct a neural net object: an encrypted version of our network. We'll demonstrate how we can encrypt data, run inference on our encrypted network, and compare the results against the expected labels.\n",
-    "Now let's dive in . . .\n",
+    "We encode and encrypt a neural network model, using the files that were created and saved before. An automated optimizer, that occurs during the call to encode_encrypt, will examine our network and will determine various configuration details that will allow running inference under encryption efficiently.\n",
     "\n",
-    "First, we define a variable \"context\" to represent the library. Note that it is still empty and will only be initialized later, once we know what configuration should we use depending on the NN model we'll build and on our requirements of the inference process"
+    "Next, we will demonstrate how we can encrypt data, run inference on our encrypted network, and compare the results against the expected labels.\n",
+    "Now let's dive in . . ."
    ]
   },
   {
@@ -297,83 +295,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = pyhelayers.DefaultContext()\n",
-    "print('HE context ready')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56683410",
-   "metadata": {},
-   "source": [
-    "We would like to create our NN model encrypted under HE. We'll first build a plain NN model and then encrypt it to receive an encrypted version of the model. We'll declare a variable \"nnp\" to represent the plain NN."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13139d73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nnp = pyhelayers.NeuralNetPlain()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c249f1d7",
-   "metadata": {},
-   "source": [
-    "Next, we initialize the NN architecture and weights. The architecture describes the different layers that form the NN and information on each. We'll load it from the JSON file that was created while building and training the model. We demonstrate how to load the weights from a pre-defined HDF5 file created in Python, containing the weights in the plain."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4eebd31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "nnp.init_from_files(hyper_params, [os.path.join(PATH, \"model.json\"), os.path.join(PATH, \"model.h5\")])\n",
-    "print(\"loaded plain model\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d1528e0",
-   "metadata": {},
-   "source": [
-    "And now for the interesting part. We'll build an encrypted version of our NN model. But in order to do that, we first need to define a configuration of the library and of the layout of each ciphertext, which we call a \"tile\".  \n",
-    "Defining all the right parameters for the library and for the layout is some hard work. It is complex and subtle, since the configuration includes multiple HE-related parameters, many of them depend on one another and on the specific NN model we defined, and the values we choose will have great influence on the security, accuracy and performance of the inference process.  \n",
-    "In order to avoid this complexity, we'll use the HE profile optimizer. This optimizer helps us find a configuration that's guaranteed to be secure and feasible. Furthermore, the optimizer receives the plain NN we've built and considers what's optimal for this very model in terms of performance.  \n",
-    "We can notify the optimizer of various requirements we have for running the model, with respect to the library and packaging considerations. For example here we ask to optimize for a batch size of 16 samples.\n",
-    "The optimizer is called when compiling the model, given HE run requirements and the plain model.\n",
-    "The result returned is a model \"profile\", describing how the library and the encrypted NN should be initialized."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6baaa636",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "he_run_req.set_he_context_options([pyhelayers.DefaultContext()])\n",
     "he_run_req.optimize_for_batch_size(16)\n",
     "\n",
-    "profile = pyhelayers.HeModel.compile(nnp, he_run_req)\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "print('Profile ready. Batch size=',batch_size)"
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode_encrypt([os.path.join(PATH, \"model.json\"), os.path.join(PATH, \"model.h5\")], he_run_req)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac516603",
+   "id": "0edbc4be",
    "metadata": {},
    "source": [
-    "The HE profile includes a set of requirements from the library, such as the security level, precision, size of ciphertext, multiplication depth etc. Some of these can be set by the user and some others were found by the optimizer based on the NN architecture we defined. We'll now take this requirement object and use it to initialize the library."
+    "The encode_encrypt method also initialized an HeContext object containing the keys. We obtain it now from the model so we can encrypt the input data."
    ]
   },
   {
@@ -383,36 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('HE context initalized')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35315c98",
-   "metadata": {},
-   "source": [
-    "We will now build our encrypted NN. We start by defining an empty HE NN, providing it with the library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0bea68e1",
-   "metadata": {},
-   "source": [
-    "Now we initialize the NN and populate its weights. Since we have already built a plain NN describing the model architecture and containing the weights, we'll simply encrypt into an encrypted version of the NN. Notice we provide the profile that was recommended by the optimizer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b268623e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nn = pyhelayers.NeuralNet(context)\n",
-    "nn.encode_encrypt(nnp, profile)\n",
-    "print('Encrypted network ready')"
+    "context = nn.get_created_he_context()"
    ]
   },
   {
@@ -455,9 +361,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop = nn.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
     "samples = pyhelayers.EncryptedData(context)\n",
-    "iop.encode_encrypt_inputs_for_predict(samples, [plain_samples])\n",
+    "model_io_encoder.encode_encrypt(samples, [plain_samples])\n",
     "print('Test data encrypted')"
    ]
   },
@@ -500,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plain_predictions = iop.decrypt_decode_output(predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(predictions)\n",
     "print('predictions',plain_predictions)"
    ]
   },
