--- a/python/notebooks/10_Neural_network_heart_disease.ipynb
+++ b/python/notebooks/10_Neural_network_heart_disease.ipynb
@@ -34,29 +34,23 @@
     "    y_test = np.array(f[\"y_test\"])\n",
     "plain_samples, labels = utils.extract_batch(x_test, y_test, 16, 0)\n",
     "\n",
-    "# Load plain model\n",
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "nnp = pyhelayers.NeuralNetPlain()\n",
-    "nnp.init_from_files(hyper_params, [input_dir + \"model.json\", input_dir + \"model.h5\"])\n",
-    "print(\"loaded plain model\")\n",
-    "\n",
-    "# Automatic optimziations\n",
+    "# Parameters controlling the run under HE\n",
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "he_run_req.set_he_context_options([pyhelayers.DefaultContext()])\n",
     "he_run_req.optimize_for_batch_size(16)\n",
-    "profile = pyhelayers.HeModel.compile(nnp, he_run_req)\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
-    "context = pyhelayers.HeModel.create_context(profile)\n",
-    "print('HE Context ready. Batch size=',batch_size)\n",
     "\n",
     "# Create encrypted network\n",
-    "nn = pyhelayers.NeuralNet(context)\n",
-    "nn.encode_encrypt(nnp, profile)\n",
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode_encrypt([input_dir + \"model.json\", input_dir + \"model.h5\"], he_run_req)\n",
+    "batch_size = nn.get_profile().get_optimal_batch_size()\n",
+    "\n",
+    "# Get HeContext\n",
+    "context = nn.get_created_he_context()\n",
     "\n",
     "# Encrypt input samples\n",
-    "iop = nn.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
     "samples = pyhelayers.EncryptedData(context)\n",
-    "iop.encode_encrypt_inputs_for_predict(samples, [plain_samples])\n",
+    "model_io_encoder.encode_encrypt(samples, [plain_samples])\n",
     "\n",
     "# MAIN PART:\n",
     "# Perform inference under encryption \n",
@@ -67,7 +61,7 @@
     "utils.report_duration('predict per sample',duration/batch_size)\n",
     "\n",
     "# Decrypt results\n",
-    "plain_predictions = iop.decrypt_decode_output(predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(predictions)\n",
     "\n",
     "print('\\nclassification results')\n",
     "print('=========================================')\n",
