--- a/python/notebooks/11_Tile_tensor.ipynb
+++ b/python/notebooks/11_Tile_tensor.ipynb
@@ -204,7 +204,7 @@
     "<br>\n",
     "\n",
     "#### Compute element-wise inverse of \"tt\" CTileTensor\n",
-    "Note that the inverse function expects to receive a lower and an upper bound on all of the values of the given CTileTensor. See FunctionEvaluator::inverse() for more details."
+    "Note that the inverse function expects to receive a lower and an upper bound on all of the values of the given CTileTensor. See FunctionEvaluator::inversePositive() for more details."
    ]
   },
   {
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "fe = pyhelayers.TTFunctionEvaluator(he_context)\n",
-    "tt = fe.inverse(tt, lower_bound, upper_bound)"
+    "tt = fe.inverse_positive(tt, lower_bound, upper_bound)"
    ]
   },
   {
