--- a/python/notebooks/15_Logistic_regression_fraud_detection_training.ipynb
+++ b/python/notebooks/15_Logistic_regression_fraud_detection_training.ipynb
@@ -73,23 +73,26 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Step 2. Encrypt the data in the trusted environment\n",
-    "* A Context is created\n",
-    "* The non-encrypted LR object is initialized\n",
-    "* A requirement configuration is used for determining the most suitable HE parameters\n",
-    "* The encryption is carried out"
+    "## Step 2. Initialize model and encrypt data in a trusted envireonment\n",
+    "* A LogisticRegression object is initialized\n",
+    "* A requirement configuration is supplied to internally determine the most suitable HE parameters\n",
+    "* The encryption of the data is carried out"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Create and initialize the logistic regression model\n",
+    "#### 2.1. Initialize and encrypt the logistic regression model\n",
     "\n",
-    "Note that in this example, we use the high-level objects provided by the pyhelayers library for LR (`LogisticRegressionPlain` and `LogisticRegression`).\n",
-    "* the number of iterations to be used in training is referred to by `hyper_params.number_of_iterations`\n",
-    "* the learning rate for training is `hyper_params.learning_rate`\n",
-    "* the activation used for training is a degree 3 polynomial approximation of the sigmoid function, and is referenced by `pyhelayers.LRActivation.SIGMOID_POLY_3`."
+    "We can provide some additional `HyperParameters` and `HeRunRequirements` as inputs.\n",
+    "\n",
+    "The used hyper parameters are:\n",
+    "* the number of iterations to be used in training, which is referred to by `hyper_params.number_of_iterations`\n",
+    "* the learning rate for training, which is `hyper_params.learning_rate`\n",
+    "* the activation used for training is a degree 3 polynomial approximation of the sigmoid function, and is referenced by `pyhelayers.LRActivation.SIGMOID_POLY_3`. \n",
+    "\n",
+    "In the HE run requirements, we set the batch size and rely on the default values for other parameters."
    ]
   },
   {
@@ -106,7 +109,15 @@
     "hyper_params.number_of_features = number_of_features\n",
     "hyper_params.trainable = True\n",
     "hyper_params.logistic_regression_activation = pyhelayers.LRActivation.SIGMOID_POLY_3\n",
-    "plain = pyhelayers.PlainModel.create(hyper_params)\n",
+    "\n",
+    "he_run_req = pyhelayers.HeRunRequirements()\n",
+    "# Request a HEaaN context if available, or a SEAL context otherwise\n",
+    "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
+    "he_run_req.optimize_for_batch_size(batch_size)\n",
+    "\n",
+    "client_lr = pyhelayers.LogisticRegression()\n",
+    "client_lr.encode_encrypt(files=[], he_run_req=he_run_req, hyper_params=hyper_params)\n",
+    "client_context = client_lr.get_created_he_context()\n",
     "\n",
     "print('logistic regression training initialised')"
    ]
@@ -115,71 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2. Compile the plain model\n",
-    "\n",
-    "The next step is compiling the model which determines the most suitable profile for this problem. We set the batch size and rely on the default values for the other parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "he_run_req = pyhelayers.HeRunRequirements()\n",
-    "# Request a HEaaN context if available, or a SEAL context otherwise\n",
-    "he_run_req.set_he_context_options([pyhelayers.HeContext.create([\"HEaaN_CKKS\", \"SEAL_CKKS\"])])\n",
-    "he_run_req.optimize_for_batch_size(batch_size)\n",
-    "\n",
-    "profile = pyhelayers.HeModel.compile(plain, he_run_req)\n",
-    "\n",
-    "print(\"He profile ready\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.3. Initialize the context\n",
-    "\n",
-    "Once the HE requirements are set, we use it to initialise the context. Since the multiplication depth is large, this may take a few seconds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_context = pyhelayers.HeModel.create_context(profile)\n",
-    "print(\"HE context with requirements initialized\", client_context)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.4. Encrypt the logistic regression model\n",
-    "\n",
-    "Once the optimizer has generated a HE profile, we use it to encode and encrypt the LR model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_lr = pyhelayers.LogisticRegression(client_context)\n",
-    "client_lr.encode_encrypt(plain, profile)\n",
-    "print(\"Logistic regression He training mode initialised\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.5. Encrypt the data in a trusted environment\n",
+    "#### 2.2. Encrypt the data in a trusted environment\n",
     "\n",
     "The plaintext samples and labels are encrypted:"
    ]
@@ -190,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop = client_lr.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(client_lr)\n",
     "\n",
     "encrypted_inputs = pyhelayers.EncryptedData(client_context)\n",
-    "iop.encode_encrypt_inputs_for_fit(encrypted_inputs, [plain_samples, labels])\n",
+    "model_io_encoder.encode_encrypt(encrypted_inputs, [plain_samples, labels])\n",
     "print('training data has been encrypted.')"
    ]
   },
@@ -201,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.6. Save and send\n",
+    "#### 2.3. Save and send\n",
     "We save the encrypted model, the context, and the samples in preparation for sending them to the server"
    ]
   },
@@ -278,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3c. Send the trained model back\n",
+    "#### 3.3. Send the trained model back\n",
     "\n",
     "We can now send back the trained model. Note that the entire server side computation does not have the secret key and no values were revealed."
    ]
