--- a/python/notebooks/18_ARIMA.ipynb
+++ b/python/notebooks/18_ARIMA.ipynb
@@ -99,24 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Initialize a `PlainModel` object representing an Arima model\n",
-    "We initialize the PlainModel using the above loaded hyperparameters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plain_arima = pyhelayers.PlainModel.create(hyper_params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.4 Define HE run requirements\n",
+    "## 1.3 Define HE run requirements\n",
     "These requirements specify how the HE encryption should be configured. Here, we require the HE encryption to be done with HEaaN encryption scheme."
    ]
   },
@@ -134,8 +117,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5 Compile the plain model and HE run requirements into HE profile\n",
-    "This HE profile holds encryption-specific parameters."
+    "### 1.4 Initialize an HE Arima model.\n",
+    "We initialized the HE Arima model with the above created HE run requirements. Calling `encode_encrypt` below activates an internal optimization process which finds the best HE-related configuration satisfying the given requirement."
    ]
   },
   {
@@ -144,15 +127,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile = pyhelayers.HeModel.compile(plain_arima, he_run_req)"
+    "he_arima = pyhelayers.Arima()\n",
+    "he_arima.encode_encrypt(files=[], he_run_req=he_run_req, hyper_params=hyper_params)\n",
+    "he_context = he_arima.get_created_he_context()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6 Initialize an HE Arima model.\n",
-    "We initialized the HE Arima model using the plain Arima model and the HE profile computed above."
+    "### 1.5 Get a `ModelIoEncoder` from the HE model.\n",
+    "The ModelIoEncoder objects will be used to encrypt and decrypt the input and output of the training and prediction."
    ]
   },
   {
@@ -161,33 +146,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "he_context = pyhelayers.HeModel.create_context(profile)\n",
-    "he_arima = plain_arima.get_empty_he_model(he_context)\n",
-    "he_arima.encode_encrypt(plain_arima, profile)"
+    "model_io_encoder = pyhelayers.ModelIoEncoder(he_arima)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.7 Get an `IoProcessor` from the HE model.\n",
-    "The IoProcessor objects will be used to encrypt and decrypt the input and output of the training and prediction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iop = he_arima.create_io_processor()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.8 Encrypt the training input"
+    "### 1.6 Encrypt the training input"
    ]
   },
   {
@@ -197,14 +163,14 @@
    "outputs": [],
    "source": [
     "X_train_enc = pyhelayers.EncryptedData(he_context)\n",
-    "iop.encode_encrypt_inputs_for_fit(X_train_enc, [X_train])"
+    "model_io_encoder.encode_encrypt(X_train_enc, [X_train])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.9 Save the initialized HE Arima model and encrypted input to a buffers"
+    "### 1.7 Save the initialized HE Arima model and encrypted input to a buffers"
    ]
   },
   {
@@ -374,8 +340,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6 Create and save an `IoProcessor` object\n",
-    "This IoProcessor can be sent to a separate entity that owns the prediction input. The separate entity then uses this IoProcessor to encrypt its data and send it to the server for prediction."
+    "## 3.6 Create and save an `ModelIoEncoder` object\n",
+    "This ModelIoEncoder can be sent to a separate entity that owns the prediction input. The separate entity then uses this IoProcessor to encrypt its data and send it to the server for prediction."
    ]
   },
   {
@@ -384,8 +350,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iop = he_arima.create_io_processor()\n",
-    "iop_buf = iop.save_to_buffer()"
+    "model_io_encoder = pyhelayers.ModelIoEncoder(he_arima)\n",
+    "model_io_encoder_buf = model_io_encoder.save_to_buffer()"
    ]
   },
   {
@@ -393,7 +359,7 @@
    "metadata": {},
    "source": [
     "### 3.7 Encrypt the prediction input\n",
-    "We load the IoProcessor object saved above and use it to encrpyt the prediction input."
+    "We load the ModelIoEncoder object saved above and use it to encrypt the prediction input."
    ]
   },
   {
@@ -403,9 +369,9 @@
    "outputs": [],
    "source": [
     "predict_input = X_train[-hyper_params.num_values_used_for_prediction:]\n",
-    "iop = pyhelayers.load_io_processor(he_context, iop_buf)\n",
+    "model_io_encoder = pyhelayers.load_io_encoder(he_context, model_io_encoder_buf)\n",
     "predict_input_enc = pyhelayers.EncryptedData(he_context)\n",
-    "iop.encode_encrypt_inputs_for_predict(predict_input_enc, [predict_input])"
+    "model_io_encoder.encode_encrypt(predict_input_enc, [predict_input])"
    ]
   },
   {
@@ -492,7 +458,7 @@
    "source": [
     "print('Decrypting the prediction result . . .')\n",
     "res_enc = pyhelayers.load_encrypted_data(he_context, res_enc_buf)\n",
-    "res = iop.decrypt_decode_output(res_enc)\n",
+    "res = model_io_encoder.decrypt_decode_output(res_enc)\n",
     "fhe_prediction = res[0]"
    ]
   },
@@ -545,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('fhe-py38-env')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
