--- a/python/notebooks/23_Multi_Party_FHE.ipynb
+++ b/python/notebooks/23_Multi_Party_FHE.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5ae97fe9",
    "metadata": {},
    "source": [
     "# Multi Party FHE\n",
-    "Expected RAM usage: 24 GB\n",
-    "Expected runtime: 8 minutes"
+    "Expected RAM usage: 7.3 GB\n",
+    "Expected runtime: 2 minutes"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4351ebe6",
    "metadata": {},
@@ -28,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ad636124",
    "metadata": {},
@@ -37,7 +34,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "80eaf08f",
    "metadata": {},
@@ -69,16 +65,16 @@
     "import shutil\n",
     "import threading\n",
     "from pyhelayers import PalisadeCkksContext, MockupContext, HeConfigRequirement, RotationSetType\n",
-    "from pyhelayers import PlainModelHyperParams, PlainModel, HeModel, HeRunRequirements, EncryptedData, LogisticRegressionPlain, LRActivation, LRDistribution\n",
+    "from pyhelayers import PlainModelHyperParams, PlainModel, HeModel, HeRunRequirements, EncryptedData, LogisticRegressionPlain, LRActivation, LRDistribution, ModelIoEncoder\n",
     "from pyhelayers import MultiPartyConfig, InitProtocol, DecryptProtocol, ProtocolMessage, ProtocolMessageVector\n",
     "from utils import get_data_sets_dir, get_temp_output_data_dir, create_clean_dir\n",
     "\n",
     "MULTI_PARTY_PATH = os.path.join(get_data_sets_dir(), 'multi_party_fhe')\n",
-    "COMMUNICATION_DIR_PATH = os.path.join(get_temp_output_data_dir(), 'multi_party_fhe')"
+    "COMMUNICATION_DIR_PATH = os.path.join(get_temp_output_data_dir(), 'multi_party_fhe')\n",
+    "create_clean_dir(get_temp_output_data_dir())"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d13c5be5",
    "metadata": {},
@@ -99,19 +95,20 @@
     "use_mockup = False\n",
     "\n",
     "req = HeConfigRequirement.insecure(\n",
-    "    num_slots = 2 ** 14,\n",
-    "    multiplication_depth = 12,\n",
-    "    fractional_part_precision = 50,\n",
+    "    num_slots = 2 ** 13,\n",
+    "    multiplication_depth = 9,\n",
+    "    fractional_part_precision = 42,\n",
     "    integer_part_precision = 10) if use_mockup else HeConfigRequirement(\n",
-    "        num_slots = 2 ** 14,\n",
-    "        multiplication_depth = 12,\n",
-    "        fractional_part_precision = 50,\n",
+    "        num_slots = 2 ** 13,\n",
+    "        multiplication_depth = 9,\n",
+    "        fractional_part_precision = 42,\n",
     "        integer_part_precision = 10)\n",
     "req.public_functions.rotate = RotationSetType.CUSTOM_ROTATIONS\n",
     "req.public_functions.set_rotation_steps([1, 16, 256, 4096])\n",
     "\n",
     "mean_x = 10.0\n",
     "std_x = 1.0\n",
+    "std_x_noise_for_fabricated_data = 0.1\n",
     "phi0 = 40.0\n",
     "phi1 = -0.4\n",
     "num_samples_each_party = 100000\n",
@@ -122,6 +119,7 @@
     "hyper_params.linear_regression_distribution_x = LRDistribution.LR_NORMAL_DISTRIBUTION\n",
     "hyper_params.linear_regression_mean_x = mean_x\n",
     "hyper_params.linear_regression_std_x = std_x\n",
+    "hyper_params.inverse_approximation_precision = 2\n",
     "hyper_params.trainable = True\n",
     "\n",
     "# This should equal the number of data owners. In our case there are two data owners (Alice and Bob).\n",
@@ -132,7 +130,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "eec63681",
    "metadata": {},
@@ -169,6 +166,8 @@
     "    he.init(req)\n",
     "\n",
     "def setup_he_model(he, hyper_params):\n",
+    "    # Unlike all other demos, in this demo we had to initialize an HeContext before initializing the HeModel.\n",
+    "    # This is because the HeContext must be generated using a multi-party initialization protocol. This requires us to use a lower-level API than the simpler API shown in most other demos.\n",
     "    lrp = PlainModel.create(hyper_params)\n",
     "    he_run_req = HeRunRequirements()\n",
     "    \n",
@@ -185,15 +184,15 @@
     "    return lr\n",
     "\n",
     "def generate_encrypt_and_save_inputs(he, name, lr):\n",
-    "    iop = lr.create_io_processor()\n",
+    "    ioe = ModelIoEncoder(lr)\n",
     "    encrypted_inputs = EncryptedData(he)\n",
     "\n",
     "    # Create fabricated data\n",
     "    error = np.random.normal(0, 1, num_samples_each_party)\n",
-    "    x = np.random.normal(mean_x, std_x, num_samples_each_party) \n",
+    "    x = np.random.normal(mean_x, std_x + std_x_noise_for_fabricated_data, num_samples_each_party) \n",
     "    y = phi0 + phi1 * x + error\n",
     "\n",
-    "    iop.encode_encrypt_inputs_for_fit(encrypted_inputs, [np.expand_dims(x, axis=1), np.expand_dims(y, axis=1)])\n",
+    "    ioe.encode_encrypt(encrypted_inputs, [np.expand_dims(x, axis=1), np.expand_dims(y, axis=1)])\n",
     "    encrypted_inputs.save_to_file(os.path.join(COMMUNICATION_DIR_PATH, name + '_encrypted_data'))\n",
     "\n",
     "def read_messages_and_execute_round(he, protocol):\n",
@@ -228,7 +227,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9c83f95a",
    "metadata": {},
@@ -261,7 +259,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ffa4b093",
    "metadata": {},
@@ -306,7 +303,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "46bfe4c5",
    "metadata": {},
@@ -360,7 +356,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f8778d42",
    "metadata": {},
@@ -444,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
