--- a/python/notebooks/20_XGBoost_prediction.ipynb
+++ b/python/notebooks/20_XGBoost_prediction.ipynb
@@ -11,7 +11,8 @@
                 "## Introduction\n",
                 " \n",
                 "This example demonstrates how to perform inference over encrypted data with an XGBoost model. We will work with the UCI-adult dataset [1-2], which predicts whether a person's income level is above 50K a year.\n",
-                "First, a plain XGBoost model will be trained on the iris dataset in the clear. Then, the trained XGBoost model will be encrypted and used to run prediction over an encrypted batch of samples from the adult dataset."
+                "First, a plain XGBoost model will be trained on the iris dataset in the clear. Then, the trained XGBoost model will be encrypted and used to run prediction over an encrypted batch of samples from the adult dataset.  \n",
+                "This demo demonstrates an advanced feature that enables storing the encrypted XGBoost model in an external storage. This feature may be useful when encrypting a large XGBoost model that might not fit in RAM. Using this feature requires us to use some low-level API, which is demonstrated and explained in the demo."
             ]
         },
         {
@@ -317,8 +318,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 2.8 Get an `IoProcessor` from the HE XGBoost model.\n",
-                "The IoProcessor object will be used to encrypt and decrypt the input and output of the FHE prediction."
+                "### 2.8 Get a `ModelIoEncoder` from the HE XGBoost model.\n",
+                "The ModelIoEncoder object will be used to encrypt and decrypt the input and output of the FHE prediction."
             ]
         },
         {
@@ -327,7 +328,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "iop = xgb.create_io_processor()"
+                "model_io_encoder = pyhelayers.ModelIoEncoder(xgb)"
             ]
         },
         {
@@ -336,7 +337,7 @@
             "metadata": {},
             "source": [
                 "### 2.9. Encrypt the test samples\n",
-                "We encrypt the test samples using the IoProcessor created above."
+                "We encrypt the test samples using the ModelIoEncoder created above."
             ]
         },
         {
@@ -346,7 +347,7 @@
             "outputs": [],
             "source": [
                 "X_test_enc = pyhelayers.EncryptedData(he_context)\n",
-                "iop.encode_encrypt_inputs_for_predict(X_test_enc, [X_test])\n",
+                "model_io_encoder.encode_encrypt(X_test_enc, [X_test])\n",
                 "print('input data encrypted')"
             ]
         },
@@ -421,7 +422,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "res_plain = iop.decrypt_decode_output(res)\n",
+                "res_plain = model_io_encoder.decrypt_decode_output(res)\n",
                 "res_plain = np.where(res_plain > 0, 1, 0)"
             ]
         },
@@ -486,7 +487,7 @@
         "kernelspec": {
             "display_name": "fhe-py38-env",
             "language": "python",
-            "name": "python3"
+            "name": "fhe-py38-env"
         },
         "language_info": {
             "codemirror_mode": {
